--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="secondary-blog-header" onclick="toggleSecondaryBlog()">
                         <span class="badge badge-secondary">Secondary Blog</span>
                         <h2 class="daas-title">
-                            Winter Tangles and How to Beat Them Naturally: Eco-Friendly Detangling Secrets <i data-lucide="chevron-down" id="secondaryBlogIcon" class="collapse-icon"></i>
+                            Winter Tangles and How to Beat Them Naturally: Eco-Friendly Detangling Secrets <span style="font-size: 0.6em; color: hsl(var(--muted-foreground)); margin-left: 1rem;">21st Nov 2025</span> <i data-lucide="chevron-down" id="secondaryBlogIcon" class="collapse-icon"></i>
                         </h2>
                     </div>
                     
