Add date (24th November 2025) to third blog title

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="secondary-blog-header" onclick="toggleThirdBlog()">
                         <span class="badge badge-secondary">Featured Blog</span>
                         <h2 class="daas-title">
-                            Tanglesgone.com: A High-Potential Beauty Brand Domain Ready for Lift-Off <i data-lucide="chevron-down" id="thirdBlogIcon" class="collapse-icon"></i>
+                            Tanglesgone.com: A High-Potential Beauty Brand Domain Ready for Lift-Off <span style="font-size: 0.6em; color: hsl(var(--muted-foreground)); margin-left: 1rem;">24th November 2025</span> <i data-lucide="chevron-down" id="thirdBlogIcon" class="collapse-icon"></i>
                         </h2>
                     </div>
                     
