Remove badges and dates from collapsible blog sections

--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
             <div class="daas-container">
                 <div class="daas-card">
                     <div class="secondary-blog-header" onclick="toggleSecondaryBlog()">
-                        <span class="badge badge-secondary">Secondary Blog</span>
                         <h2 class="daas-title">
-                            Winter Tangles and How to Beat Them Naturally: Eco-Friendly Detangling Secrets <span style="font-size: 0.6em; color: hsl(var(--muted-foreground)); margin-left: 1rem;">21st Nov 2025</span> <i data-lucide="chevron-down" id="secondaryBlogIcon" class="collapse-icon"></i>
+                            Winter Tangles and How to Beat Them Naturally: Eco-Friendly Detangling Secrets <i data-lucide="chevron-down" id="secondaryBlogIcon" class="collapse-icon"></i>
                         </h2>
                     </div>
                     
@@ -212,9 +211,8 @@
             <div class="daas-container">
                 <div class="daas-card">
                     <div class="secondary-blog-header" onclick="toggleThirdBlog()">
-                        <span class="badge badge-secondary">Featured Blog</span>
                         <h2 class="daas-title">
-                            Tanglesgone.com: A High-Potential Beauty Brand Domain Ready for Lift-Off <span style="font-size: 0.6em; color: hsl(var(--muted-foreground)); margin-left: 1rem;">24th November 2025</span> <i data-lucide="chevron-down" id="thirdBlogIcon" class="collapse-icon"></i>
+                            Tanglesgone.com: A High-Potential Beauty Brand Domain Ready for Lift-Off <i data-lucide="chevron-down" id="thirdBlogIcon" class="collapse-icon"></i>
                         </h2>
                     </div>
                     
